# ArkLang

./: .gitignore  ARK_AGENT_PAYLOAD_v112_5.md  ARK_OMEGA_POINT.md  CONTRIBUTING.md  INTRINSIC_PARITY.md  LICENSE  MANUAL.md  README.md  THIRD_PARTY_NOTICES.md  check_output.txt  compilation_output.txt  debug_regex.py  index.html  output.txt  parser_output.txt  pyproject.toml  recursive_factorial.py  sovereign_launch.bat  test_memory.enc  verify_ui.py
.agent/: instructions.md  rules.json
apps/: asset_blitz.ark  bracket_compiler.ark  cat.ark  cat.json  config_parser.ark  crypto_test.ark  crypto_test.json  ffi_test.ark  ffi_test.json  gyroid_compiler.ark  hash_tool.ark  hello.ark  honeycomb_compiler.ark  http_fetch.ark  iron_hand.ark  iron_hand.json  json_transform.ark  leviathan_compiler.ark  market_maker.ark  miner.ark  sovereign.py  sovereign_script.py  spec.ark  struct_test.ark  struct_test.json  todo_cli.ark  turbine_compiler.ark  wallet.ark  yig_metamaterial_compiler.ark
benchmarks/: factorial.ark  factorial.json
core/: Cargo.toml  build.bat  check_output.txt  nts_test_file.txt
docs/: API_REFERENCE.md  ARK_EPISTEMOLOGICAL_ROADMAP.md  ARK_LANGUAGE_SPEC.md  ARK_TECHNICAL_DOSSIER.md  AUDIT_2026_02_16_PHASE_78.md  MANIFESTO.md  QUICK_START.md  ROADMAP.md  ROADMAP_PHASE_79.md  STDLIB_REFERENCE.md  THE_ARK_CODEX.md  USER_MANUAL.md
examples/: fib.ark
lib/: bip39_words.ark  wallet_lib.ark
meta/: SWARM_LAUNCH_LOG.txt  ark.lark  ark.py  ark_interpreter.py  ark_intrinsics.py  ark_parser.py  ark_security.py  ark_types.py  build_compiler.py  compile.py  debug_ast.py  gauntlet.py  repl.py  spin_torsion_analysis.py  swarm_launch.py  test_lsp.py  validate_glb.py
ops/: activate_swarm_omega.py  jules_deploy.py  monitor_swarm.py  monitor_swarm_omega.py  verify_identity.py
site/: snake.html  snake.json
src/: agent.py  config.py  config_fallback.py  mcp_client.py  memory.py  swarm.py
tests/: conftest.py  debug.json  factorial.wasm  factorial_v.wasm  glenn_lewis.json  golden_demo.sh  hello_wasm.ark  hello_wasm.wasm  linear_fail.json  linear_pass.json  nts_compliance.ark  nts_compliance.json  print_test.ark  print_test.wasm  test_audio.ark  test_coder_agent.py  test_coder_agent_security.py  test_docker_exec_truncation.py  test_docker_security.py  test_ec.ark  test_gcd.ark  test_interpreter_logic.py  test_keystore.ark  test_local_sandbox.py  test_local_sandbox_security.py  test_market_maker.ark  test_mcp_client.py  test_mcp_client_errors.py  (+25 more)
(+160 files in other folders)
